--- a/style.css
+++ b/style.css
@@ -2,41 +2,53 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;                     /* Needs to change */
+    box-sizing: border-box;
+
 }
 
 .header{                             /* Backgroud image*/
     min-height: 100vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url(pic.png);
+    background-image: linear-gradient(rgba(4, 9, 30, 0.7), rgba(4, 9, 30, 0.7)), url("wallpaperflare.com_wallpaper.jpg");
     background-position: center;
     background-size: cover;
     position: relative;
 }
 nav{
     display: flex;
-    padding: 2% 6%;
+    padding: 1% 3%;
     justify-content: space-between;
     align-items: center;
 }
+.logo_link{
+flex: 2;
+
+}
+
 nav img{
-    width: 150px;
+    flex: 1;
+    width: 92px;
 }
 .nav-links{
-    flex: 1;
+    flex: 1.5;
     text-align: right;
 }
 
 /*To organise the navigation links*/
+.nav-links ul {
+    display: flex;
+    justify-content: space-around;
+}
 .nav-links ul li{                       
     list-style: none;
     display: inline-block;
-    padding: 8px 12px;
+    padding: 5px 12px;
     position: relative;
 }
 .nav-links ul li a{
     color: white;
     text-decoration: none;
-    font-size: 13px;
+    font-size: 16px;
 }
 .nav-links ul li::after{
     content: '';
@@ -54,17 +66,18 @@ nav img{
     width: 90%;
     color: white;
     position: absolute;
-    top: 50%;
+    top: 60%;
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
 }
 .text-box h1{
     font-size: 50px;
+    margin-bottom:24px;
 }
 .text-box p{
-    margin: 10px 0 40px;
-    font-size: 14px;
+    margin: 10px 0 90px;
+    font-size: 18px;
     color: white;
 }
 
